<resources>
    <string name="app_name">Expense Tracker</string>

    <string name="shared_preferences_key">org.theronin.budgettracker.PREFERENCES</string>

    <string name="pref_cat_account_settings">Account Settings</string>

    <string name="pref_account_add_key">add_account</string>
    <string name="pref_account_add_title">Add Account</string>
    <string name="pref_account_add_summary">Add an account to be able to save and sync your data</string>


    <string name="pref_account_change_password_key">pref_account_change_password_key</string>
    <string name="pref_account_change_password_title">Change Password</string>
    <string name="pref_account_change_password_summary">Change the password associated with your account.</string>

    <string name="pref_cat_currency_title">Currency Settings</string>

    <string name="pref_home_currency_key">home_currency</string>
    <string name="pref_home_currency_title">Home Currency</string>
    <string name="pref_home_currency_summary">The currency you use at home. This should be the currency you\'re most familiar with.\nEvery expense item will be converted back to: %s. </string>
    <string name="pref_currency_default">EUR</string>

    <string name="pref_current_currency_key">current_currency</string>
    <string name="pref_current_currency_title">Current Currency</string>
    <string name="pref_current_currency_summary">The currency you are using currently. Change this value if you travel or buy online.\nAll new expense items will be stored in: %s. </string>

    <string name="settings_activity">Settings</string>

    <string name="entries_activity">Entries</string>
    <string name="categories_activity">Categories</string>

    <string name="total_summary_month">%s:</string>

    <string name="tv__menu_item_entries">Organise Entries</string>
    <string name="tv__menu_item_categories">Organise Categories</string>

    <string name="tv__add_category_title">New Category</string>
    <string name="tv__add_entry_title">New Entry</string>

    <string name="btn__add_entry_confirm">Enter</string>
    <string name="btn__add_category_confirm">Enter</string>
    <string name="exception_category_not_found_by_name">A Category could not be found matching the name %s</string>
    <string name="exception_category_not_found_by_id">A Category could not be found matching the id %d</string>
    <string name="entry_store_not_ready">The EntryStore currently has no items available</string>
    <string name="failed_to_add_category">Failed to save the input category %s</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="action_backup">Backup entries</string>
    <string name="action_restore">Restore from backup</string>
    <string name="action_save">SAVE</string>

    <string name="select_category">Category</string>
    <string name="enter_amount">Amount</string>
    <string name="select_date">Date</string>

    <string name="date_since">Since %s</string>

    <string name="entry_confirm_discard_dialog__message">Discard new entries?</string>
    <string name="entry_confirm_discard_dialog__positive_button">DISCARD</string>
    <string name="entry_confirm_discard_dialog__negative_button">CANCEL</string>

    <string name="category_name_dialog__title_new">New Category</string>
    <string name="category_name_dialog__title_edit">Edit Category Name</string>
    <string name="category_name_dialog__positive_button_new">Create</string>
    <string name="category_name_dialog__positive_button_edit">Update</string>
    <string name="category_name_dialog__hint">Category Name</string>

    <string name="category_delete_dialog__title">Delete Category: \"%s\"?</string>
    <string name="category_delete_dialog__message">Deleting a category cannot be undone, and all entries under this category will also be deleted. Perhaps you want to merge instead?</string>
    <string name="category_delete_dialog__positive_button">DELETE</string>

    <string name="category_merge_dialog__title">Merge Category: \"%s\"?</string>
    <string name="category_merge_dialog__message">Merging two categories cannot be undone and you run the risk of losing specific information about your spending habits.\n\nMerging can be useful if you realize you have duplicate category names, or you\'re sure you won\'t care about keeping track of this category.</string>
    <string name="category_merge_dialog__positive_button">CONTINUE</string>

    <string name="category_merge_confirm_dialog__title">Confirm Merge</string>
    <string name="category_merge_confirm_dialog__message">Merge \"%1$s\" into \"%2$s\"?</string>
    <string name="category_merge_confirm_dialog__positive_button">MERGE</string>
    <string name="category_merge_confirm_dialog__negative_button">CANCEL</string>

    <string name="category_options_dialog__title">Category: \"%s\"</string>
    <string name="category_options_edit_name">Edit name</string>
    <string name="category_options_merge">Merge with another category </string>
    <string name="category_options_delete">Delete category</string>

    <string name="empty_category_name_error">Please enter a name for the new category.</string>
    <string name="duplicate_category_error">The category \"%s\" already exists.</string>
    <string name="category_creation_success">Category successfully added.</string>
    <string name="category_update_success">Category successfully updated.</string>
    <string name="delete_selection_dialog_title">Delete Selection?</string>
    <string name="delete_selection_dialog_positive_button">DELETE</string>
    <string name="delete_selection_dialog_negative_button">CANCEL</string>
    <string name="delete_selection_dialog_message">Are you sure you want to delete these %d entries? This action cannot be undone.</string>
    <string name="suffix_thousand">k</string>
    <string name="suffix_million">m</string>
    <string name="suffix_billion">b</string>
    <string name="amount_placeholder">\??.??</string>
    <string name="cancel">CANCEL</string>
    <string name="accept">ACCEPT</string>

    <string name="next">NEXT</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="sign_in">Sign In</string>
    <string name="back">BACK</string>
    <string name="create_account_caps">CREATE ACCOUNT</string>
    <string name="create_account">Create Acount</string>

    <string name="launch_welcome_title">Welcome to Expense Tracker!</string>
    <string name="launch_welcome_message">Keep track of your daily spending habits with this easy-to-use tool.
        \n\nCreate expense items under your own custom categories and let the application keep track of this information,
        summarizing what you spend each day.
    </string>

    <string name="launch_skip_account_title">Create an Account?</string>
    <string name="launch_skip_account_body">You can choose to skip account registration now and try out the app.
        Note that without an account your data cannot be synced with other devices.
        \n\nIf you choose to create an account later, any entries you create in the meantime will be transferred to your new account.</string>

    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="launch_sign_in_title">Sign in With an Existing Account</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="launch_create_account_title">Create a New Account</string>
    <string name="existing_account">EXISTING ACCOUNT?</string>
    <string name="sign_up_caps">SIGN UP</string>


    <string name="pref_welcome_screen_has_been_shown">pref_welcome_screen_has_been_shown</string>
    <string name="pref_newly_created_database">pref_newly_created_database</string>

    <string name="content_authority">com.theronin.expensetracker.provider</string>
    <string name="sync_account_type">org.theronin</string>
    <string name="merging_categories">Merging \"%s\" to:</string>
    <string name="select_category_dialog_header">Select a Category</string>

    <string name="category_separator_frequency">TOP CATEGORIES</string>
    <string name="category_separator_alphabetical">BY ALPHABETICAL ORDER</string>
    <string name="add_entry_dialog_title">Add Expense Items</string>
    <string name="entry_add_another_item">ADD ANOTHER ITEM</string>
    <string name="empty_category_hint">Select Category</string>
    <string name="continue_to_registration">CONTINUE</string>
    <string name="sign_up_later">SIGN UP LATER</string>
    <string name="dialog_change_password_title">Change Password?</string>
    <string name="dialog_change_password_body">This action will send an email to your address for further instructions on how to change your password.</string>
    <string name="send_caps">SEND</string>
    <string name="invalid_email">Please provide a valid email address</string>
    <string name="password_to_short">Please provide a password with least %d characters</string>
    <string name="passwords_dont_match">Please check that your passwords match and try again</string>
    <string name="no_internet">Please check your internet connection and try again</string>
    <string name="failed_sign_in">Failed to sign in. Please check your credentials and try again.</string>
    <string name="failed_create_account">Failed to create a new account. Please try again later.</string>
    <string name="credentials_taken">That email address is already in use.</string>
</resources>
