<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/material_default_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_create_account_title"
        android:textColor="@color/primary_dark"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/et__username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:layout_marginTop="@dimen/material_default_margin"
        />

    <EditText
        android:id="@+id/et__email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/material_default_margin"
        />

    <EditText
        android:id="@+id/et__password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/material_default_margin"
        android:layout_marginTop="@dimen/material_default_margin"/>

</LinearLayout>