<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingBottom="20dp"
              android:paddingTop="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/edit"
        android:background="@drawable/list_item_selector"
        android:clickable="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:src="@drawable/ic_edit"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:textSize="16dp"
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/category_options_edit_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/merge"
        android:background="@drawable/list_item_selector"
        android:clickable="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:src="@drawable/ic_merge"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:textSize="16dp"
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/category_options_merge"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete"
        android:background="@drawable/list_item_selector"
        android:clickable="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:src="@drawable/ic_delete_black"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:textSize="16dp"
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/category_options_delete"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    </LinearLayout>

</LinearLayout>